<resources>
    <string name="app_name">WeShare</string>
    <string name="main">首頁</string>
    <string name="member">會員</string>
    <string name="calender">行事曆</string>
    <string name="cart">購物車</string>
    <string name="mall">教材商城</string>
    <string name="GoodsOrder">訂單管理</string>
    <string name="GoodsLike">教材收藏</string>
    <string name="insCourseVO">課程</string>
    <string name="myInsCourse">我的課程</string>
    <string name="myLikeInsCourse">課程收藏</string>
    <string name="InsCourseBrowser">課程瀏覽</string>
    <string name="CourseCategort">課程分類</string>
    <string name="CourseDetail">課程詳情</string>
    <string name="Personal">個人課程</string>
    <string name="Group">團體課程</string>
    <string name="Reservation">預約課程</string>
    <string name="directory_buy">直接購買</string>
    <string name="date">日期</string>
    <string name="price">單價</string>
    <string name="handling">手續費</string>
    <string name="total">總金額</string>
    <string name="remarks">備註</string>
    <string name="send_reservation">提交預約</string>
    <string name="start_time">開始時間</string>
    <string name="end_time">結束時間</string>
    <string name="log_in">登入</string>
    <string name="log_in_first">請先登入</string>
    <string name="cancel">取消</string>
    <string name="log_out">登出</string>
    <string name="sigh_in">註冊</string>
    <string name="forget_password">忘記密碼</string>
    <string name="drawer_open">draweropen</string>
    <string name="drawer_close">drawerclose</string>
    <string name="search_title">搜尋</string>
    <string name="action_settings">Settings</string>
    <string name="nothing"></string>
    <string name="Friend">好友管理</string>
    <string name="ChatRoom">聊天室</string>
    <string name="MyWallet">我的錢包</string>
    <string name="Teacher">授課老師</string>
    <string name="InscLoc">上課地點</string>
    <string name="text_Send">送出</string>

    <string-array name="goodsCount">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_calendar">CalendarActivity</string>
    <string name="title_activity_ins_course_detail">InsCourseDetailActivity</string>
    <string name="title_activity_maps">Map</string>


    <string name="text_NotGranted">not granted</string>

    <!--for Calendar-->
    <string name="material_calendar_monday">一</string>
    <string name="material_calendar_tuesday">二</string>
    <string name="material_calendar_wednesday">三</string>
    <string name="material_calendar_thursday">四</string>
    <string name="material_calendar_friday">五</string>
    <string name="material_calendar_saturday">六</string>
    <string name="material_calendar_sunday">日</string>

    <array name="material_calendar_months_array">
        <item>一月</item>
        <item>二月</item>
        <item>三月</item>
        <item>四月</item>
        <item>五月</item>
        <item>六月</item>
        <item>七月</item>
        <item>八月</item>
        <item>九月</item>
        <item>十月</item>
        <item>十一月</item>
        <item>十二月</item>
    </array>
    <string name="title_activity_arround_me_map">Map</string>
    <string name="title_activity_my_course_map">Map</string>

</resources>
